<resources>
    <string name="ADD_PLAYRULE_API_RBT_CATEGORY_DOESNT_EXIST">We are facing a temporary issue in setting this tune as your GoonGoon. Please try after some time.</string>
    <string name="ADD_PLAYRULE_API_RBT_CONTENT_EXPIRED">We are facing a temporary issue in setting this tune as your GoonGoon. Please try after some time.</string>
    <string name="ADD_PLAYRULE_API_RBT_SONG_EXPIRED">We are facing a temporary issue in setting this tune as your GoonGoon. Please try after some time.</string>
    <string name="ADD_PLAYRULE_API_RBT_SUB_ALREADY_OWNS_CONTENT">This tune is already set as your GoonGoon.</string>
    <string name="ADD_PLAYRULE_API_RBT_SUB_DOESNT_EXIST">Please Register before setting the GoonGoon.</string>
    <string name="ADD_PLAYRULE_API_RBT_SUB_DOESNT_OWN_CONTENT">Dear Customer, Your previous request is already being processed. Kindly try again after some time.</string>
    <string name="Bengali">Bengali</string>
    <string name="DELETE_SONG_API_RBT_DEACTIVATE_SELECTION_ERROR">We are facing a temporary issue while removing a GoonGoon. Please try after sometime.</string>
    <string name="DELETE_SONG_API_RBT_INVALID_PARAMETER">Dear Customer, Your previous request is already being processed. Kindly try again after some time.</string>
    <string name="GET_PLAYRULE_API_RBT_INVALID_PARAMETER">We are facing a temporary issue. Please try after sometime.</string>
    <string name="GET_PLAYRULE_API_RBT_PLAY_RULE_NOT_EXIST">Hey ! Your callers are listening to the same old boring tring tring. Discover and set a favourite one from a huge library of GoonGoon.</string>
    <string name="GET_PLAYRULE_API_RBT_SUB_DOESNT_EXIST">Hey ! Your callers are listening to the same old boring tring tring. Discover and set a favourite one from a huge library of GoonGoon.</string>
    <string name="GET_PLAYRULE_API_RBT_UNKNOWN_ERROR">We are facing a temporary issue. Please try after sometime.</string>
    <string name="INTERNAL_SERVER_ERROR">Internal server error. You can retry after some times</string>
    <string name="MAX_UDP_CONTENT_LIMIT_REACHED">Oh ! Maximum limit for containing songs in the shuffle has been reached</string>
    <string name="PRICING_API_RBT_INVALID_SUBSCRIBER_STATE">Your deactivation request for GoonGoon service is currently pending. Please try again later.</string>
    <string name="PURCHASE_COMBO_API_CONTENT_BLOCKED_ADRBT">Dear Subscriber, you are currently active on the GoonGoon pack.To deactivate CALL 846690 or SMS STOP to 28466 Toll free and then try activating through GoonGoon App.</string>
    <string name="PURCHASE_COMBO_API_CONTENT_BLOCKED_CORP_USER">Corporate tune is active on your number, hence GoonGoon cannot be changed. To change, please contact your Company Admin.</string>
    <string name="PURCHASE_COMBO_API_CONTENT_BLOCKED_LITE_USER">You are not allowed to activate this GoonGoon as this is a premium GoonGoon.</string>
    <string name="PURCHASE_COMBO_API_CONTENT_BLOCKED_PROFILE">Dear Subscriber, you are currently active on the Profile tunes pack.To deactivate CALL 846690 or SMS STOP to 28466 Toll free and then try activating through GoonGoon App.</string>
    <string name="PURCHASE_COMBO_API_LOCKED_USER">You cannot change your tunes since your GoonGoon service is locked. To Unlock, SMS CT UNLOCK to 56789 at Rs. 5/SMS</string>
    <string name="PURCHASE_COMBO_CORPORATE_CONTEN_NOT_ALLOWED">CorporateTune is active on your number, hence song selection cannot be done. For further assistance please contact your Relationship Manager.</string>
    <string name="RBT_CATEGORY_DOESNT_EXIST">We are facing a temporary issue in setting this tune as your GoonGoon. Please try after some time.</string>
    <string name="RBT_CONTENT_BLOCKED_ADRBT">Dear Subscriber, you are currently active on the Advertisement GoonGoon pack. To deactivate,CALL 846690 or SMS STOP to 28466 Toll free and then try activating through GoonGoon App.</string>
    <string name="RBT_CONTENT_BLOCKED_CORP_USER">Corporate tune is active on your number, hence GoonGoon cannot be changed. To change, please contact your Company Admin.</string>
    <string name="RBT_CONTENT_BLOCKED_LITE_USER">You are not allowed to activate this GoonGoon as this is a premium GoonGoon.</string>
    <string name="RBT_CONTENT_BLOCKED_PROFILE">Dear Subscriber, you are currently active on the Profile tunes pack. To deactivate,CALL 846690 or SMS STOP to 28466 Toll free and then try activating through GoonGoon App.</string>
    <string name="RBT_CONTENT_EXPIRED">We are facing a temporary issue in setting this tune as your GoonGoon. Please try after some time.</string>
    <string name="RBT_DEACTIVATE_SELECTION_ERROR">We are facing a temporary issue. Please try after some time.</string>
    <string name="RBT_INTERNAL_SERVER_ERROR">We are facing a temporary issue. Please try after some time.</string>
    <string name="RBT_INVALID_PARAMETER">We are facing a temporary issue. Please try after some time.</string>
    <string name="RBT_INVALID_SHUFFLE_LIST_ID">Invalid selection. Please try a different selection.</string>
    <string name="RBT_INVALID_SUBSCRIBER_ID">We are facing a temporary issue with your subscription details. Please try after some time.</string>
    <string name="RBT_LOCKED_USER">You cannot change your tunes since your GoonGoon service is locked.</string>
    <string name="RBT_MAX_UDP_LIMIT_REACHED">Oh ! Already created maximum shuffles, use one of them or delete one to create a new one.</string>
    <string name="RBT_OFFER_NOT_FOUND">No offer available</string>
    <string name="RBT_OPERATION_NOT_ALLOWED">This tune cannot be set as your GoonGoon for your number. Please contact Customer Care.</string>
    <string name="RBT_PLAY_RULE_NOT_EXIST">Cannot delete a GoonGoon without selecting callers.</string>
    <string name="RBT_SONG_EXPIRED">We are facing a temporary issue in setting this tune as your GoonGoon. Please try after some time.</string>
    <string name="RBT_SONG_NOT_FOUND">We are facing a temporary issue in setting this tune as your GoonGoon. Please try after some time.</string>
    <string name="RBT_SUBSCRIBER_GRACE">Your previous subscription is pending for renewal, please recharge with sufficient amount to continue with the service.</string>
    <string name="RBT_SUBSCRIBER_SUSPENDED">Your subscription is currently suspended. Please contact Customer Care for more details.</string>
    <string name="RBT_SUB_ACT_PENDING">Your previous activation request is in pending state. You do not have sufficient balance to activate the service .Please re-try after sometime.</string>
    <string name="RBT_SUB_ALREADY_EXIST">You have already Subscribed to this Service.</string>
    <string name="RBT_SUB_ALREADY_OWNS_CONTENT">This tune is already set as your GoonGoon for your selected Callers.</string>
    <string name="RBT_SUB_DEACT_PENDING">Your de-activation request is pending. Please re-try after some time.</string>
    <string name="RBT_SUB_DOESNT_EXIST">GoonGoon cannot be set for this number. Please try after some time.</string>
    <string name="RBT_SUB_DOESNT_OWN_CONTENT">There is some Technical Error! Kindly try again after some time.</string>
    <string name="RBT_SUB_STATUS_CHANGE_NOT_ALLOWED">Cannot change status of your subscription. Please contact customer care.</string>
    <string name="RBT_UDP_IS_ACTIVE">This tune is already set as your GoonGoon for your selected callers.</string>
    <string name="RBT_UNKNOWN_ERROR">We are facing a temporary issue. Please try after some time.</string>
    <string name="REMOVE_PALYRULE_API_RBT_PLAY_RULE_NOT_EXIST">Dear Customer, Your previous request is already being processed. Kindly try again after some time.</string>
    <string name="REMOVE_PALYRULE_API_RBT_SUB_DOESNT_EXIST">Please Register before setting the GoonGoon.</string>
    <string name="REMOVE_PALYRULE_API_RBT_UNKNOWN_ERROR">Dear Customer, Your previous request is already being processed. Kindly try again after some time.</string>
    <string name="SONG_PURCHASE_API_RBT_CATEGORY_DOESNT_EXIST">We are facing a temporary issue in setting this tune as your GoonGoon. Please try after some time.</string>
    <string name="SONG_PURCHASE_API_RBT_CONTENT_EXPIRED">We are facing a temporary issue in setting this tune as your GoonGoon. Please try after some time.</string>
    <string name="SONG_PURCHASE_API_RBT_OPERATION_NOT_ALLOWED">This tune cannot be set as your GoonGoon. Please contact Customer Care.</string>
    <string name="SONG_PURCHASE_API_RBT_SONG_EXPIRED">We are facing a temporary issue in setting this tune as your GoonGoon. Please try after some time.</string>
    <string name="SONG_PURCHASE_API_RBT_SONG_NOT_FOUND">We are facing a temporary issue in setting this tune as your GoonGoon. Please try after some time.</string>
    <string name="SONG_PURCHASE_API_RBT_SUB_ALREADY_OWNS_CONTENT">This tune is already set as your GoonGoon.</string>
    <string name="SONG_PURCHASE_API_RBT_SUB_DOESNT_EXIST">Please Register before setting the GoonGoon.</string>
    <string name="_out_of_">" out of "</string>
    <string name="a_new_version_is_available">A new version is available!</string>
    <string name="a_z">A-Z</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="about">About</string>
    <string name="anonymous">Anonymous</string>
    <string name="available_plans_desc">49 ipsum dolor sit amet, consectetur adipiscing. adipiscing.</string>
    <string name="available_plans_title">Choose Your Plan</string>
    <string name="empty_activity_info1">No Active Plan Yet</string>
    <string name="empty_activity_info2">Let people listen to tunes of your choice every time they call you. Choose from our wide collection of songs to get started today!</string>
    <string name="go_to_store">Go to Music Store</string>
    <string name="label_about_app">About GoonGoon</string>
    <string name="label_change_app_language">App Display Language</string>
    <string name="label_change_content_language">Tone Language</string>
    <string name="label_change_plan">Change Your Plan</string>
    <string name="label_feedback">Feedback</string>
    <string name="label_help_faq">Help &amp; FAQ</string>
    <string name="label_switch_personalized_shuffle">Shuffle your Tunes</string>
    <string name="label_terms_conditions">Terms &amp; Conditions</string>
    <string name="label_unsubscribe">Unsubscribe</string>
    <string name="label_your_number">User Number</string>
    <string name="labeled_play_win_exciting_prizes">Play &amp; Win Exciting Prizes</string>
    <string name="loading">Loading</string>
    <string name="plans_purchase_success_message">"It might take some time to set the tune. A SMS has been sent. New users please reply with 'YES' to complete the subscription successfully."</string>
    <string name="play_for_all_callers_info">Your tune will play as long as your subscription is active.</string>
    <string name="profile_my_account">My Plan</string>
    <string name="purchase_confirm_cancel">Cancel</string>
    <string name="purchase_confirm_confirm">Confirm</string>
    <string name="purchase_confirm_title_vi_movies">Subscribe?</string>
    <string name="set_small">Set</string>
    <string name="settings">Settings</string>
</resources>