<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:id="@id/profile_nested_scroll_view" android:paddingTop="@dimen/activity_toolbar_padding_Top" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <include android:id="@id/promo_parent" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/promo_banner" />
        <com.onmobile.rbtsdkui.util.customview.MediumTextView android:theme="@style/App.TextView.Error" android:id="@id/tv_loading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loading" android:layout_below="@id/promo_parent" android:layout_centerInParent="true" />
        <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/list_layout" android:paddingTop="@dimen/activity_padding_half" android:paddingBottom="@dimen/activity_padding" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/promo_parent">
            <LinearLayout android:gravity="left" android:layout_gravity="center" android:orientation="horizontal" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RelativeLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/rv_profile_picture" android:layout_width="100.0dip" android:layout_height="100.0dip">
                    <com.google.android.material.imageview.ShapeableImageView android:gravity="center" android:layout_gravity="center" android:id="@id/iv_profile_picture" android:layout_width="65.0dip" android:layout_height="65.0dip" android:scaleType="fitXY" android:layout_centerInParent="true" app:shapeAppearanceOverlay="@style/CircleCut.CornerSize50Percent" app:srcCompat="@drawable/default_album_art" app:strokeColor="#ff151718" app:strokeWidth="1.0dip" />
                </RelativeLayout>
                <RelativeLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <com.onmobile.rbtsdkui.util.customview.MediumTextView android:theme="@style/App.TextView.Multiline" android:textSize="20.0sp" android:textColor="@color/white" android:id="@id/tv_profilename" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Hello" android:maxLines="2" />
                    <com.onmobile.rbtsdkui.util.customview.MediumTextView android:theme="@style/App.TextView.Multiline" android:textSize="14.0sp" android:textColor="#ff8d8c90" android:id="@id/tv_phonenumber" android:paddingTop="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/anonymous" android:maxLines="2" android:layout_below="@id/tv_profilename" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
                <com.onmobile.rbtsdkui.util.customview.RegularTextView android:theme="@style/App.TextView.SingleLine" android:textSize="20.0sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/settings" android:layout_marginStart="@dimen/activity_margin" />
                <com.onmobile.rbtsdkui.widget.LabeledView android:id="@id/labeled_my_account" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="14.0dip" app:label="@string/profile_my_account" app:labelTextColor="@color/my_profile_title_color" app:labelTextSize="16.0sp" app:valueTextColor="@color/my_profile_title_color" app:valueTextSize="16.0sp" />
                <com.onmobile.rbtsdkui.widget.LabeledView android:id="@id/labeled_change_number" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="14.0dip" app:label="@string/label_your_number" app:labelTextColor="@color/my_profile_title_color" app:labelTextSize="16.0sp" app:valueTextColor="@color/my_profile_title_color" app:valueTextSize="16.0sp" />
                <RelativeLayout android:id="@id/multi_number_layout" android:paddingTop="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
                    <com.onmobile.rbtsdkui.util.customview.LightTextView android:theme="@style/App.TextView.Multiline" android:textSize="@dimen/txt_label_labeled_size" android:gravity="start|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="User Number" android:layout_alignParentStart="true" />
                    <LinearLayout android:id="@id/spinner_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentEnd="true">
                        <Spinner android:layout_gravity="right" android:id="@id/spinner" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    </LinearLayout>
                    <View android:id="@id/view_divider_labeled" android:background="@color/divider" android:layout_width="wrap_content" android:layout_height="@dimen/divider_height" android:layout_marginTop="16.0dip" android:layout_below="@id/spinner_layout" android:layout_marginStart="4.0dip" android:layout_marginEnd="4.0dip" />
                </RelativeLayout>
                <com.onmobile.rbtsdkui.widget.LabeledView android:id="@id/labeled_personalized_shuffle" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="14.0dip" app:label="@string/label_switch_personalized_shuffle" app:labelTextColor="@color/my_profile_title_color" app:labelTextSize="16.0sp" app:switcher="true" app:valueTextSize="16.0sp" />
                <com.onmobile.rbtsdkui.widget.LabeledView android:id="@id/labeled_change_plan" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="14.0dip" app:label="@string/label_change_plan" app:labelTextColor="@color/my_profile_title_color" app:labelTextSize="16.0sp" app:valueTextColor="@color/my_profile_title_color" app:valueTextSize="16.0sp" />
                <com.onmobile.rbtsdkui.widget.LabeledView android:id="@id/labeled_change_language" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="14.0dip" app:label="@string/label_change_content_language" app:labelTextColor="@color/my_profile_title_color" app:labelTextSize="16.0sp" app:value=">" app:valueTextColor="@color/my_profile_title_color" app:valueTextSize="16.0sp" />
                <com.onmobile.rbtsdkui.widget.LabeledView android:id="@id/labeled_change_app_language" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="14.0dip" app:label="@string/label_change_app_language" app:labelTextColor="@color/my_profile_title_color" app:labelTextSize="16.0sp" app:value=">" app:valueTextColor="@color/my_profile_title_color" app:valueTextSize="16.0sp" />
                <com.onmobile.rbtsdkui.widget.LabeledView android:id="@id/labeled_help_faq" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="14.0dip" android:paddingEnd="@dimen/store_margin" app:label="@string/label_help_faq" app:labelTextColor="@color/my_profile_title_color" app:labelTextSize="16.0sp" app:value=">" app:valueTextColor="@color/my_profile_title_color" app:valueTextSize="16.0sp" />
                <com.onmobile.rbtsdkui.widget.LabeledView android:id="@id/labeled_play_win_exciting_prizes" android:layout_width="fill_parent" android:layout_height="wrap_content" app:label="@string/labeled_play_win_exciting_prizes" app:labelTextColor="@color/my_profile_title_color" app:labelTextSize="16.0sp" app:value=">" app:valueTextColor="@color/my_profile_title_color" app:valueTextSize="16.0sp" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
                <com.onmobile.rbtsdkui.util.customview.RegularTextView android:theme="@style/App.TextView.SingleLine" android:textSize="20.0sp" android:textColor="@color/white" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/about" android:layout_marginStart="@dimen/activity_margin" />
                <com.onmobile.rbtsdkui.widget.LabeledView android:id="@id/labeled_about_app" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="14.0dip" android:paddingEnd="@dimen/store_margin" app:label="@string/label_about_app" app:labelTextColor="@color/my_profile_title_color" app:labelTextSize="16.0sp" app:valueTextColor="@color/my_profile_title_color" app:valueTextSize="16.0sp" />
                <com.onmobile.rbtsdkui.widget.LabeledView android:id="@id/labeled_terms_condition" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="14.0dip" android:paddingEnd="@dimen/store_margin" app:label="@string/label_terms_conditions" app:labelTextColor="@color/my_profile_title_color" app:labelTextSize="16.0sp" app:value=">" app:valueTextColor="@color/my_profile_title_color" app:valueTextSize="16.0sp" />
                <com.onmobile.rbtsdkui.widget.LabeledView android:id="@id/labeled_feedback" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="14.0dip" android:paddingEnd="@dimen/store_margin" app:label="@string/label_feedback" app:labelTextColor="@color/my_profile_title_color" app:labelTextSize="16.0sp" app:value=">" app:valueTextColor="@color/my_profile_title_color" app:valueTextSize="16.0sp" />
                <com.onmobile.rbtsdkui.widget.LabeledView android:id="@id/labeled_unsubscribe" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:label="@string/label_unsubscribe" app:labelTextColor="@color/my_profile_title_color" app:labelTextSize="16.0sp" app:valueTextColor="@color/my_profile_title_color" app:valueTextSize="16.0sp" />
            </LinearLayout>
        </LinearLayout>
        <com.onmobile.rbtsdkui.util.customview.MediumTextView android:textSize="14.0sp" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/btn_unsubscribe" android:background="@drawable/contact_cancel_button" android:visibility="visible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="46.0dip" android:layout_marginTop="32.0dip" android:text="@string/label_unsubscribe" android:layout_below="@id/list_layout" android:layout_centerHorizontal="true" android:paddingStart="36.0dip" android:paddingEnd="36.0dip" style="@style/App.TextView.Button" />
        <FrameLayout android:id="@id/unSubscriptionPopup" android:layout_width="325.0dip" android:layout_height="wrap_content" android:layout_centerInParent="true" />
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
