<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:orientation="vertical" android:id="@id/fragment_set_caller_tune_subscribe_container" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/plan_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
        <FrameLayout android:id="@id/layout_showcase_bottom_sheet" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:orientation="vertical" android:id="@id/caller_choice_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.legacy.widget.Space android:layout_width="fill_parent" android:layout_height="@dimen/activity_margin" />
            <include layout="@layout/bottom_sheet_layout_choice_common" />
        </LinearLayout>
        <com.onmobile.rbtsdkui.widget.PlanViewLayout android:id="@id/layout_plan" android:layout_width="fill_parent" android:layout_height="wrap_content" app:footer_text="@string/available_plans_desc" app:header_text="@string/available_plans_title" />
        <com.onmobile.rbtsdkui.util.customview.RegularTextView android:theme="@style/App.TextView.Multiline" android:textSize="13.0sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/play_for_all_callers_info" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="26.0dip" android:text="@string/play_for_all_callers_info" android:layout_marginStart="@dimen/activity_margin" android:layout_marginEnd="@dimen/activity_margin" />
        <com.onmobile.rbtsdkui.util.customview.RegularTextView android:textColor="@color/black" android:layout_gravity="center" android:id="@id/tv_set_bottom_sheet" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="72.0dip" android:minHeight="32.0dip" android:text="@string/set_small" style="@style/App.TextView.Button" />
    </LinearLayout>
    <LinearLayout android:gravity="bottom" android:orientation="vertical" android:id="@id/layout_subscribe_confirm" android:background="#ff2f3043" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:minHeight="@dimen/bottom_sheet_set_tune_min_height" android:animateLayoutChanges="true">
        <androidx.legacy.widget.Space android:id="@id/space" android:layout_width="fill_parent" android:layout_height="120.0dip" />
        <com.onmobile.rbtsdkui.util.customview.MediumTextView android:textSize="24.0sp" android:textColor="@color/congratulation_title_color" android:ellipsize="end" android:gravity="start" android:id="@id/tv_subscribe_heading" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/purchase_confirm_title_vi_movies" android:maxLines="1" android:layout_below="@id/space" android:paddingStart="@dimen/bottom_sheet_content_padding" android:paddingEnd="@dimen/bottom_sheet_content_padding" />
        <com.onmobile.rbtsdkui.util.customview.RegularTextView android:textSize="14.0sp" android:textColor="@color/congratulation_title_color" android:ellipsize="end" android:gravity="start" android:id="@id/tv_subscribe_message" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/plans_purchase_success_message" android:lines="3" android:layout_below="@id/tv_subscribe_heading" android:paddingStart="@dimen/bottom_sheet_content_padding" android:paddingEnd="@dimen/bottom_sheet_content_padding" />
        <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="8.0dip" android:paddingEnd="8.0dip">
            <com.onmobile.rbtsdkui.util.customview.RegularTextView android:textColor="@color/white" android:id="@id/tv_cancel_button" android:background="@drawable/background_confirm_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:minWidth="72.0dip" android:minHeight="40.0dip" android:text="@string/purchase_confirm_cancel" android:layout_weight="1.0" android:layout_marginStart="4.0dip" android:layout_marginEnd="4.0dip" style="@style/App.TextView.Button" />
            <View android:background="@android:color/transparent" android:layout_width="4.0dip" android:layout_height="fill_parent" />
            <com.onmobile.rbtsdkui.util.customview.RegularTextView android:textColor="@color/black" android:id="@id/tv_confirm_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:minWidth="72.0dip" android:minHeight="40.0dip" android:text="@string/purchase_confirm_confirm" android:layout_weight="1.0" android:layout_marginStart="4.0dip" android:layout_marginEnd="4.0dip" style="@style/App.TextView.Button" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
