<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/empty_activity_parent_layout" android:paddingTop="26.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.onmobile.rbtsdkui.util.customview.MediumTextView android:textSize="@dimen/empty_activity_info1" android:textColor="@color/empty_activity_info1" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/empty_activity_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="46.0dip" android:text="@string/empty_activity_info1" />
    <com.onmobile.rbtsdkui.util.customview.RegularTextView android:textSize="@dimen/empty_activity_info2" android:textColor="@color/empty_activity_info2" android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/empty_activity_info2" />
    <com.onmobile.rbtsdkui.util.customview.MediumTextView android:textSize="@dimen/empty_activity_go_to_store" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/empty_activity_go_to_store" android:background="@drawable/set_bottom_new" android:layout_width="wrap_content" android:layout_height="46.0dip" android:layout_marginTop="26.0dip" android:text="@string/go_to_store" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" style="@style/App.TextView.Button" />
</LinearLayout>
